--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   http: ^0.13.3
   provider: ^5.0.0
+  markdown: ^4.0.0
+  flutter_markdown: ^0.6.4
 
 
   # The following adds the Cupertino Icons font to your application.
