--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   provider: ^5.0.0
   markdown: ^4.0.0
   flutter_markdown: ^0.6.4
+  shared_preferences: ^2.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
