--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   markdown: ^4.0.0
   flutter_markdown: ^0.6.4
   shared_preferences: ^2.0.6
-
+  url_launcher: ^6.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
