--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_markdown: ^0.6.8
   shared_preferences: ^2.0.6
   url_launcher: ^6.0.9
+  page_transition: ^2.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
