--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   shared_preferences: ^2.0.6
   url_launcher: ^6.0.9
   page_transition: ^2.0.4
+  shimmer: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
